fix vertical-align img in team block

--- a/src/sass/_team.sass
+++ b/src/sass/_team.sass
@@ -17,6 +17,7 @@
         margin-bottom: 30px
         img
             border-radius: 15px
+            vertical-align: bottom
     span
         display: inline-block
         color: #000000
